<resources>
    <string name="app_name">Exhibitor Rērum</string>
    <string name="user_name">Username</string>
    <string name="title">Title</string>
    <string name="body">Body</string>
    <string name="comments">Comments</string>
    <string name="email">Email</string>
    <string name="website">Website</string>
    <string name="street">Street</string>
    <string name="city">City</string>
    <string name="zip_code">Zip-code</string>
    <string name="geolocation">Google Maps Link</string>
    <string name="images">Images</string>
    <string name="header_text">Posts</string>
</resources>
